--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,29 @@
 </head>
 <body>
 <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">My application</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('app_location_index') }}">Locations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_weather_history_index') }}">Weather history</a>
+                </li>
+                <li class="nav-item">
+                    {% if is_granted('ROLE_USER') %}
+                        <a  class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                    {% else %}
+                        <a  class="nav-link" href="{{ path('app_login') }}">Login</a>
+                    {% endif %}
+                </li>
+            </ul>
+        </div>
+    </nav>
     {% block body %}{% endblock %}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
