--- a/templates/weather_history/index.html.twig
+++ b/templates/weather_history/index.html.twig
@@ -34,6 +34,7 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_weather_history_new') }}">Create new</a>
+    {% if is_granted('ROLE_WEATHER_HISTORY_NEW') %}
+        <a href="{{ path('app_weather_history_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
